refactor(PlayerGroup): 외부에서 Player를 조작할 수 없도록 방어적 복사 적용